# foto-owl-ai

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agents/: __init__.py  compiler_fixer.py  image_analyser.py  intent_parser.py  renderer.py  script_generator.py  storyboard_writer.py
graph/: __init__.py  pipeline.py
models/: __init__.py  groq_provider.py  model_router.py  openai_provider.py  state.py
rag/: __init__.py  store.py
rag/documents/remotion_api/: absolute_fill.md  composition.md  interpolate.md  sequence.md  static_assets.md
rag/documents/style_guides/: cinematic.md  corporate.md  sports_highlights.md  upbeat.md
remotion/: package-lock.json  package.json  tsconfig.json
remotion/src/: EventReel.tsx  Root.tsx  index.ts
tests/: __init__.py  conftest.py  test_compiler_fixer.py  test_image_analyser.py  test_intent_parser.py  test_pipeline.py  test_script_generator.py  test_storyboard_writer.py
